--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@fontsource/montserrat-alternates": "^5.1.0",
+    "@fontsource/poppins": "^5.1.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1"
   },
