--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
   "dependencies": {
     "@fontsource/montserrat-alternates": "^5.1.0",
     "@fontsource/poppins": "^5.1.1",
+    "@react-email/components": "^0.0.32",
+    "nodemailer": "^6.9.16",
     "react": "^18.3.1",
     "react-dom": "^18.3.1"
   },
