--- a/package.json
+++ b/package.json
@@ -10,9 +10,12 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@emailjs/browser": "^4.4.1",
     "@fontsource/montserrat-alternates": "^5.1.0",
     "@fontsource/poppins": "^5.1.1",
     "@react-email/components": "^0.0.32",
+    "dotenv": "^16.4.7",
+    "emailjs-com": "^3.2.0",
     "nodemailer": "^6.9.16",
     "react": "^18.3.1",
     "react-dom": "^18.3.1"
