--- a/package.json
+++ b/package.json
@@ -13,12 +13,13 @@
     "@emailjs/browser": "^4.4.1",
     "@fontsource/montserrat-alternates": "^5.1.0",
     "@fontsource/poppins": "^5.1.1",
-    "@react-email/components": "^0.0.32",
+    "@react-email/components": "^0.0.13",
     "dotenv": "^16.4.7",
     "emailjs-com": "^3.2.0",
     "nodemailer": "^6.9.16",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "react-modal": "^3.16.3"
   },
   "devDependencies": {
     "@eslint/js": "^9.15.0",
